so a many chanmany changes

--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full.less
@@ -4,17 +4,20 @@
 
 //SHARED
 
-
+html,body{
+  height: 100%
+}
 
 //OFF-CANVAS NAV
-.st-menu{
-  width: 20em;
+.off-canvas-nav{
+  width: 22em;
+  left: -22em;
 
   .nav-wrapper{
     padding: 1em 0;
 
-    .nav-logo{
-      padding: 0 1em;
+    .nav-logo-link{
+      padding: 0 2em;
     }
 
     #menu-main{
@@ -31,6 +34,7 @@
           &:hover{
             border-color: @purple;
             padding-left: .5em;
+            background: rgba(0,0,0,0.2);
           }
         }
 
@@ -51,15 +55,20 @@
       }
 
       .menu-item-has-children{
-        padding: 1em 0 0;
+        padding: 0;
       }
     }
   }
 }
 
-.st-effect-6.st-menu-open .st-pusher {
+//OPEN NAV
+.menu-open{
 
+  .outer-container{
+
+  }
 }
+
 
 //TEMPLATE
 
@@ -68,13 +77,7 @@
   margin: 0 auto;
 }
 
-.outer-container{
-  padding: 0;
-}
-
 header{
-  position: fixed;
-  width: 100%;
 
   .header-wrapper{
     .wrapper;
@@ -82,28 +85,76 @@ header{
     .left-header{
 
       .header-logo{
+        .lh-transition(all .3s ease);
+        margin: 0;
 
         img{
 
         }
+
+        &:hover{
+          .lh-rotate(360deg);
+        }
       }
 
       .nav-btn{
+        cursor: pointer;
+        padding-top: 3px;
+        margin: 0 0 0 .7em;
 
         .menu-icon{
+          margin: 3px .1em 0 0;
 
           div{
-
+            margin-bottom: 5px;
+            .lh-transition(color .3s ease);
           }
         }
 
         .menu-title{
+          .font-size(1.8em,1em);
+          .lh-transition(color .3s ease);
+        }
 
+        &:hover{
+
+          .menu-title{
+            color: @lt-purple;
+          }
+        }
+      }
+
+      .loop-btn{
+        .inline(middle);
+        background: @purple;
+        margin: 0 0 0 .7em;
+        color: @black;
+        padding: .25em;
+        cursor: pointer;
+        .lh-transition(background .3s ease);
+
+        span{
+          .font-size(1em,1em);
+          text-transform: uppercase;
+          letter-spacing: 1px;
+        }
+
+        &.active{
+          background: @grey;
+
+          &:hover{
+            background: @grey;
+          }
+        }
+
+        &:hover{
+          background: @lt-purple;
         }
       }
     }
 
     .right-header{
+      padding-top: 1em;
 
       .header-contact{
 
@@ -137,6 +188,7 @@ header{
 
 section.main{
   .wrapper;
+  z-index: 0;
 }
 
 footer{
@@ -148,7 +200,11 @@ footer{
 .home{
 
   .outer-container{
-    padding-top: 20em;
+
+    .main{
+      padding-top: 13em;
+    }
+
   }
 
   .hero-container{
@@ -176,6 +232,392 @@ footer{
   }
 }
 
+//WHAT WE DO & WHO WE ARE
+
+.what-we-do, .who-we-are{
+
+  //SHARED
+
+  .panel-tab{
+
+  }
+
+  //TABS
+
+  .main{
+    padding-top: 5em;
+
+    .tabs-container{
+      position: relative;
+      padding: 0 50% 0 0;
+
+      .main-title{
+
+      }
+
+      .panel-group{
+
+        .panel{
+
+          .panel-heading{
+
+            .panel-title{
+
+              .accordion-toggle{
+
+                .title{
+
+                }
+
+                .glyphicon{
+
+                }
+
+                &:hover{
+
+                }
+
+                &.collapsed{
+
+                  .glyphicon{
+
+                  }
+
+                  &:hover{
+
+                  }
+
+                }
+              }
+            }
+          }
+
+          .panel-body{
+
+            .content{
+
+            }
+
+            //VIDEO GALLERY
+            .video-gallery-outer{
+
+              .projects-title{
+
+              }
+
+              .thumbs-container{
+
+                .thumbs-content{
+
+                  .thumb-item{
+
+                    img{
+
+                    }
+
+                    &.active{
+
+                    }
+                  }
+                }
+
+                .ps-scrollbar-x-rail{
+
+                  &:hover{
+
+                  }
+
+                  .ps-scrollbar-x{
+
+                  }
+                }
+              }
+
+              .project-details{
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 49%;
+                min-height: 10em;
+
+                .blur-container{
+                  .dk-bg;
+
+                  &.blurred{
+
+                  }
+                }
+
+                .project-item{
+                  .padding;
+
+                  .video-container{
+                    width: 100%;
+                    height: 18.6em;
+                  }
+
+                  .title{
+
+                    h2{
+
+                    }
+                  }
+
+                  .info-container{
+
+                    .desc{
+
+                    }
+
+                    &.w-logo{
+
+                      .client-logo{
+
+                        img{
+
+                        }
+                      }
+
+                      .desc{
+
+                      }
+                    }
+                  }
+                }
+              }
+            }
+
+            //TEAM
+            .team-module{
+
+              .team-members{
+
+                .team-thumbs{
+
+                  .team-thumb{
+                    cursor: pointer;
+
+                    img{
+
+                    }
+
+                    &.active{
+
+                    }
+                  }
+                }
+
+                .team-items{
+                  display: none;
+                  position: absolute;
+                  top: 0;
+                  right: 0;
+                  width: 49%;
+                  padding: 0;
+
+                  .blur-container{
+                    .padding;
+                    .dk-bg;
+
+                    &.blurred{
+
+                    }
+
+                    .team-item{
+
+                      &:first-child{
+
+                      }
+
+                      .image{
+
+                      }
+
+                      .info{
+
+                        .credentials{
+
+                          .name{
+
+                          }
+
+                          .position{
+
+                          }
+
+                          .email{
+
+                            a{
+
+                              &:hover{
+
+                              }
+                            }
+                          }
+                        }
+
+                        .bio{
+
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+//CONTACT
+
+.contact{
+
+  .main{
+   padding-top: 3em;
+  }
+
+  #ajaxy{
+
+  }
+
+  .information-section{
+    margin: 0;
+
+    .info-title{
+
+    }
+
+    .info-container{
+
+      .info-item{
+
+        h3{
+
+        }
+
+        .info-wrapper{
+
+          a{
+            .lh-transition(color .3s ease);
+          }
+
+          .info{
+
+            strong{
+
+            }
+          }
+
+          .phone{
+
+          }
+
+          .mobile{
+
+          }
+
+          .email{
+
+          }
+        }
+      }
+    }
+  }
+
+  .locations-section{
+
+    .locations{
+
+      .location-item{
+
+        .title{
+          cursor: pointer;
+          .lh-transition(color .3s ease);
+
+          &:hover{
+            color: @lt-grey;
+          }
+        }
+
+        .address-container{
+
+        }
+
+        &.active{
+
+          .title{
+
+            &:hover{
+              color: @purple !important;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .map-container{
+
+    .map-slider{
+
+      &.slide{
+
+      }
+
+      #map-canvas{
+
+      }
+    }
+  }
+
+  //INFO BUBBLE
+  .info-bubble{
+
+    .info-bubble-top{
+
+      span{
+
+      }
+    }
+
+    .info-bubble-content{
+
+      *{
+
+      }
+
+      .address,
+      .phone,
+      .email,
+      .directions{
+
+      }
+
+      .address{
+
+      }
+
+      .phone{
+
+        &:hover{
+
+        }
+      }
+
+      .email{
+
+      }
+
+      .directions{
+
+      }
+    }
+  }
+}
 
 /* --------------------------------------------------- *\
   CROSSBROWSING
