--- a/new/RMP-wordpress/wp-content/themes/RMP/css/bigvideo.css
+++ b/new/RMP-wordpress/wp-content/themes/RMP/css/bigvideo.css
@@ -3,7 +3,7 @@
 */
 #big-video-wrap{overflow:hidden;position:fixed;height:100%;width:100%;top:0;left:0;}
 #big-video-vid,#big-video-image{position:absolute;}
-#big-video-control-container{position:fixed;bottom:20px;padding: 0 20px;width:100%;
+#big-video-control-container{position:fixed;bottom:0;padding:10px;width:100%;background:rgba(0,0,0,.25);
   -webkit-transition-duration:0.6s;-moz-transition-duration:0.6s;-ms-transition-duration:0.6s;-o-transition-duration:0.6s;transition-duration:0.6s;}
 #big-video-control{width:100%;height:16px;position:relative;}
 #big-video-control-middle{margin: 0 56px 0 24px;}
