--- a/new/RMP-wordpress/wp-content/themes/RMP/css/component.css
+++ b/new/RMP-wordpress/wp-content/themes/RMP/css/component.css
@@ -9,11 +9,11 @@ html,
 body,
 .st-pusher,
 .st-content {
-    height: 100%;
+    /*height: 100%;*/
 }
 
 .st-content {
-	overflow-y: scroll;
+	/*overflow-y: scroll;*/
 }
 
 .st-content,
@@ -43,7 +43,8 @@ body,
 	height: 0;
 	content: '';
 	opacity: 0;
-	-webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
+    background: rgba(0,0,0,0.8);
+    -webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
 	transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
 }
 
@@ -51,7 +52,7 @@ body,
 	width: 100%;
 	height: 100%;
 	opacity: 1;
-	-webkit-transition: opacity 0.8s;
+    -webkit-transition: opacity 0.8s;
 	transition: opacity 0.8s;
 }
 
@@ -73,7 +74,7 @@ body,
 	right: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0,0,0,0.2);
+	background: rgba(0,0,0,0.8);
 	content: '';
 	opacity: 1;
 	-webkit-transition: opacity 0.5s;
@@ -88,7 +89,7 @@ body,
 	transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
 }
 
-/* Effect 1: Slide in on top */
+/* effect 1: slide in on top */
 .st-effect-1.st-menu {
 	visibility: visible;
 	-webkit-transform: translate3d(-100%, 0, 0);
