misc changes pt 1

--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full.less
@@ -77,6 +77,10 @@ html,body{
   margin: 0 auto;
 }
 
+#big-video-wrap{
+  display: block;
+}
+
 header{
 
   .header-wrapper{
@@ -614,6 +618,62 @@ footer{
 
       .directions{
 
+      }
+    }
+  }
+}
+
+//BOX
+
+.box{
+  margin: 3em 0 0;
+
+  h1{
+    .font-size(1.8em,1em);
+  }
+
+  p{
+    .content-text;
+  }
+}
+
+//SINGLE PROJECT
+.single-projects{
+
+  .project-item{
+    .padding;
+
+    .video-container{
+      width: 40em;
+      height: 23em;
+      margin: 0 auto;
+    }
+
+    .title{
+
+      h2{
+
+      }
+    }
+
+    .info-container{
+
+      .desc{
+
+      }
+
+      &.w-logo{
+
+        .client-logo{
+
+          img{
+
+          }
+        }
+
+        .desc{
+
+        }
       }
     }
   }
