--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/mini-tablet.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/mini-tablet.less
@@ -519,6 +519,24 @@ footer{
   }
 }
 
+//BOX
+
+.box{
+
+  h1{
+
+  }
+
+  p{
+
+  }
+}
+
+//SINGLE PROJECT
+.single-projects{
+
+}
+
 /* --------------------------------------------------- *\
   CROSSBROWSING
 \* --------------------------------------------------- */
