--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/tablet.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/tablet.less
@@ -523,6 +523,25 @@ footer{
   }
 }
 
+//BOX
+
+.box{
+
+  h1{
+
+  }
+
+  p{
+
+  }
+}
+
+//SINGLE PROJECT
+.single-projects{
+
+
+}
+
 /* --------------------------------------------------- *\
   CROSSBROWSING
 \* --------------------------------------------------- */
