--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full-lg.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full-lg.less
@@ -6,11 +6,12 @@
 
 
 //OFF-CANVAS NAV
-.st-menu{
+.off-canvas-nav{
 
   .nav-wrapper{
+    font-size: 1.2em;
 
-    .nav-logo{
+    .nav-logo-link{
 
     }
 
@@ -46,10 +47,6 @@
   }
 }
 
-.st-effect-6.st-menu-open .st-pusher {
-
-}
-
 //TEMPLATE
 
 .wrapper{
@@ -65,7 +62,6 @@ header{
 
 
   .header-wrapper{
-    .wrapper;
 
     .left-header{
 
@@ -108,7 +104,7 @@ header{
   .header-contact-links{
 
     .contact-links-wrapper{
-      .wrapper;
+      .font-size(1.2em,1em);
 
       .contact-tip{
 
@@ -136,20 +132,166 @@ footer{
 .home{
 
   .hero-container{
+    width: 35em;
 
     .hero-logo{
 
     }
 
     .hero-slogan{
-
+      .font-size(1.8em,1.6em);
     }
   }
 
   .home-nav{
+    padding: 5em 0 0;
 
     a{
 
+    }
+  }
+}
+
+//CONTACT
+
+.contact{
+
+  .main{
+
+  }
+
+  #ajaxy{
+
+  }
+
+  .information-section{
+
+    .info-title{
+
+    }
+
+    .info-container{
+
+      .info-item{
+
+        h3{
+
+        }
+
+        .info-wrapper{
+
+          a{
+
+          }
+
+          .info{
+
+            strong{
+
+            }
+          }
+
+          .phone{
+
+          }
+
+          .mobile{
+
+          }
+
+          .email{
+
+          }
+        }
+      }
+    }
+  }
+
+  .locations-section{
+
+    .locations{
+
+      .location-item{
+
+        .title{
+
+          &:hover{
+
+          }
+        }
+
+        .address-container{
+
+        }
+
+        &.active{
+
+          .title{
+
+            &:hover{
+
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .map-container{
+
+    .map-slider{
+
+      &.slide{
+
+      }
+
+      #map-canvas{
+        height: 500px;
+      }
+    }
+  }
+
+  //INFO BUBBLE
+  .info-bubble{
+
+    .info-bubble-top{
+
+      span{
+
+      }
+    }
+
+    .info-bubble-content{
+
+      *{
+
+      }
+
+      .address,
+      .phone,
+      .email,
+      .directions{
+
+      }
+
+      .address{
+
+      }
+
+      .phone{
+
+        &:hover{
+
+        }
+      }
+
+      .email{
+
+      }
+
+      .directions{
+
+      }
     }
   }
 }
