--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/tablet.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/tablet.less
@@ -251,6 +251,7 @@ footer{
                 .thumbs-content{
 
                   .thumb-item{
+                    width: 6.5em;
 
                     img{
 
@@ -407,18 +408,25 @@ footer{
   .information-section{
 
     .info-title{
-
+      .font-size(2em,1em);
+      margin: 0 0 1em;
     }
 
     .info-container{
 
       .info-item{
+        border: 0;
+        .inline(middle);
+        width: 46%;
+        padding: .5em;
+        margin: .5em;
 
         h3{
-
+          text-align: center;
         }
 
         .info-wrapper{
+          text-align: center;
 
           .info{
 
@@ -437,6 +445,11 @@ footer{
 
           .email{
 
+          }
+
+          a:last-child{
+            margin: 0;
+            padding: 0;
           }
         }
       }
