--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/base.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/base.less
@@ -122,6 +122,7 @@ img {
 @white: #ffffff;
 @lt-grey: #B2B2B2;
 @grey: #5B5D58;
+@onyx: #1c1c1c;
 @black: #000000;
 
 @lt-purple: #9AA5E8;
@@ -152,7 +153,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 100%;
-  background: @black;
+  background: @onyx;
 }
 
 body{
