--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/phone.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/phone.less
@@ -266,6 +266,16 @@ header{
             border-color: @lt-purple;
           }
         }
+
+        &.email-section{
+
+          a{
+
+            span{
+              .scaleX(1.2);
+            }
+          }
+        }
       }
     }
   }
@@ -388,7 +398,7 @@ footer{
         margin: 0 0 .5em;
         text-align: left;
         color: @purple;
-        .text-shadow-bottom(@lt-purple);
+        border-left: 3px solid @purple;
       }
 
       .panel-group{
@@ -411,11 +421,12 @@ footer{
                   .left;
                 }
 
-                .glyphicon{
+                .arrow{
                   .right;
-                  width: 13px;
-                  height: 15px;
-                  .font-size(.7em,1em);
+                  width: 1.2em;
+                  padding: .2em;
+                  .lh-grayscale(0);
+                  .lh-rotate(-180deg);
                   .lh-transition(transform .3s ease);
                 }
 
@@ -426,8 +437,9 @@ footer{
                 &.collapsed{
                   color: @grey;
 
-                  .glyphicon{
-                    .lh-rotate(-180deg);
+                  .arrow{
+                   .lh-grayscale(100);
+                   .lh-rotate(0deg);
                   }
 
                   &:hover{
@@ -468,7 +480,8 @@ footer{
 
                   .thumb-item{
                     .inline(middle);
-                    width: 5em;
+                    width: 6em;
+                    border-top: 3px solid transparent;
                     line-height: 0;
                     .lh-opacity(0.7);
                     .lh-transition(all .3s ease);
@@ -479,6 +492,7 @@ footer{
                     }
 
                     &.active{
+                      border-color: @purple;
                       .lh-opacity(1.0);
                     }
                   }
