--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full.less
@@ -8,6 +8,10 @@ html,body{
   height: 100%
 }
 
+.btn{
+  .lh-transition(background .3s ease);
+}
+
 //OFF-CANVAS NAV
 .off-canvas-nav{
   width: 22em;
@@ -173,6 +177,7 @@ header{
   }
 
   .header-contact-links{
+    .font-size(1.4em,1em);
 
     .contact-links-wrapper{
       width: 100%;
@@ -302,6 +307,7 @@ footer{
           }
 
           .panel-body{
+            padding: 0 .7em .7em;
 
             .content{
 
