--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full-lg.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full-lg.less
@@ -4,12 +4,19 @@
 
 //SHARED
 
+.content-text{
+  .font-size(1.3em,1.9em);
+}
+
+.btn{
+  .font-size(1.1em,1.2em);
+}
 
 //OFF-CANVAS NAV
 .off-canvas-nav{
 
   .nav-wrapper{
-    font-size: 1.2em;
+    font-size: 1.4em;
 
     .nav-logo-link{
 
@@ -62,6 +69,7 @@ header{
 
 
   .header-wrapper{
+    font-size: 1.2em;
 
     .left-header{
 
@@ -75,9 +83,10 @@ header{
       .nav-btn{
 
         .menu-icon{
+          margin: 0 .1em 0 0;
 
           div{
-
+            height: 4px;
           }
         }
 
@@ -104,7 +113,7 @@ header{
   .header-contact-links{
 
     .contact-links-wrapper{
-      .font-size(1.2em,1em);
+      .font-size(1.4em,1em);
 
       .contact-tip{
 
@@ -152,6 +161,235 @@ footer{
   }
 }
 
+//WHAT WE DO & WHO WE ARE
+
+.what-we-do, .who-we-are{
+
+  //SHARED
+
+  .panel-tab{
+
+  }
+
+  //TABS
+
+  .main{
+    padding-top: 7em;
+
+    .tabs-container{
+
+      .main-title{
+        .font-size(1.8em,1em);
+      }
+
+      .panel-group{
+
+        .panel{
+
+          .panel-heading{
+
+            .panel-title{
+
+              .accordion-toggle{
+                .font-size(1.8em,1em);
+
+                .title{
+
+                }
+
+                .glyphicon{
+
+                }
+
+                &:hover{
+
+                }
+
+                &.collapsed{
+
+                  .glyphicon{
+
+                  }
+
+                  &:hover{
+
+                  }
+
+                }
+              }
+            }
+          }
+
+          .panel-body{
+            padding: 0 .9em .9em;
+
+            .content{
+              .content-text;
+            }
+
+            //VIDEO GALLERY
+            .video-gallery-outer{
+
+              .projects-title{
+                .font-size(1.6em,1em);
+              }
+
+              .thumbs-container{
+
+                .thumbs-content{
+
+                  .thumb-item{
+                    width: 9em;
+
+                    img{
+
+                    }
+
+                    &.active{
+
+                    }
+                  }
+                }
+
+                .ps-scrollbar-x-rail{
+
+                  &:hover{
+
+                  }
+
+                  .ps-scrollbar-x{
+
+                  }
+                }
+              }
+
+              .project-details{
+
+                .blur-container{
+
+                  &.blurred{
+
+                  }
+                }
+
+                .project-item{
+
+                  .video-container{
+                    height: 27.6em;
+                  }
+
+                  .title{
+
+                    h2{
+                      .font-size(1.7em,1.2em);
+                    }
+                  }
+
+                  .info-container{
+
+                    .desc{
+                      .content-text;
+                    }
+
+                    &.w-logo{
+
+                      .client-logo{
+
+                        img{
+
+                        }
+                      }
+
+                      .desc{
+
+                      }
+                    }
+                  }
+                }
+              }
+            }
+
+            //TEAM
+            .team-module{
+
+              .team-members{
+
+                .team-thumbs{
+
+                  .team-thumb{
+                    width: 8em;
+                    margin: 1em;
+                    .lh-border-radius(200px);
+
+                    img{
+
+                    }
+
+                    &.active{
+
+                    }
+                  }
+                }
+
+                .team-items{
+
+                  .blur-container{
+
+                    &.blurred{
+
+                    }
+
+                    .team-item{
+
+                      &:first-child{
+
+                      }
+
+                      .image{
+                        width: 18em;
+                        .lh-border-radius(500px);
+                      }
+
+                      .info{
+
+                        .credentials{
+                          .font-size(1.3em,1.5em);
+
+                          .name{
+
+                          }
+
+                          .position{
+
+                          }
+
+                          .email{
+
+                            a{
+
+                              &:hover{
+
+                              }
+                            }
+                          }
+                        }
+
+                        .bio{
+                          .content-text;
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 //CONTACT
 
 .contact{
@@ -171,6 +409,7 @@ footer{
     }
 
     .info-container{
+      font-size: 1.3em;
 
       .info-item{
 
@@ -210,6 +449,7 @@ footer{
   .locations-section{
 
     .locations{
+      .font-size(1.3em);
 
       .location-item{
 
@@ -262,6 +502,7 @@ footer{
     }
 
     .info-bubble-content{
+      font-size: 1.2em;
 
       *{
 
