multiple changes to css and social icons

--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full-lg.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full-lg.less
@@ -102,6 +102,12 @@ header{
 
         a{
 
+          &.dashicons{
+            width: 30px;
+            height: 35px;
+            font-size: 29px;
+          }
+
           &.active{
 
           }
