--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/phone.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/phone.less
@@ -261,6 +261,13 @@ header{
           .lh-transition(all .3s ease);
           border-bottom: 2px solid transparent;
 
+          &.dashicons{
+            width: 30px;
+            height: 29px;
+            font-size: 25px;
+            margin: 0;
+          }
+
           &.active{
             color: @lt-purple;
             border-color: @lt-purple;
