misc changes and site is done SON

--- a/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full.less
+++ b/new/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full.less
@@ -5,7 +5,15 @@
 //SHARED
 
 html,body{
-  height: 100%
+  height: 100%;
+
+  &.grey{
+    background: @onyx !important;
+
+    body{
+      background: @onyx !important;
+    }
+  }
 }
 
 .btn{
@@ -211,7 +219,7 @@ footer{
   .outer-container{
 
     .main{
-      padding-top: 13em;
+      padding-top: 11.5em;
     }
 
   }
@@ -249,7 +257,6 @@ footer{
 //WHAT WE DO & WHO WE ARE
 
 .what-we-do, .who-we-are{
-
   //SHARED
 
   .panel-tab{
