home page btns changed

--- a/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full-lg.less
+++ b/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full-lg.less
@@ -159,10 +159,10 @@ footer{
   }
 
   .home-nav{
-    padding: 5em 0 0;
+    padding: 4em 0 0;
 
     a{
-
+      .font-size(2em,1em);
     }
   }
 }
