--- a/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full.less
+++ b/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/full.less
@@ -240,10 +240,11 @@ footer{
   }
 
   .home-nav{
-    padding: 3em 0 0;
+    padding: 2em 0 0;
 
     a{
-      .font-size(2em,1em);
+      .font-size(1.6em,1em);
+      padding: .5em .5em .25em .5em;
       border-bottom: 3px solid transparent;
       .lh-transition(all .3s ease);
 
