--- a/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/phone.less
+++ b/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/phone.less
@@ -602,6 +602,7 @@ footer{
                     border: 2px solid transparent;
 
                     img{
+                      .lh-border-radius(50px);
                       width: 100%;
                       height: auto;
                     }
